alignment fix - 2

--- a/resources/assets/sass/components/_common.scss
+++ b/resources/assets/sass/components/_common.scss
@@ -35,5 +35,5 @@ hr{
 
 .display-header-right{
   display: inline-flex;
-  margin-right: -9%;
+  margin-right: -6%;
 }
